# policies

./: README.md  policies.cabal  restrictions.cabal  stack.yaml
src/Data/: Lattice.hs  Policy.hs  Semilattice.hs
test/Data/: PolicySpec.hs
test/Test/Hspec/: Laws.hs
