name:                policies
version:             0.1.0.0
synopsis:            Policy algebra
description:         Please see README.md
homepage:            https://github.com/4e6/policies#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Bushev
copyright:           2016 Dmitry Bushev
category:            Algebra, Data, Math
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Lattice
                     , Data.Policy
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5 && < 1
                     , groups >= 0.4 && < 1
                     , QuickCheck >= 2.8
  default-language:    Haskell2010

test-suite policies-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , policies
                     , containers >= 0.5
                     , derive >= 2.5
                     , groups >= 0.4
                     , hspec >= 2.2
                     , QuickCheck >= 2.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Data.PolicySpec
                     , Test.Hspec.Laws

source-repository head
  type:     git
  location: https://github.com/4e6/policies
